--- a/src/pages/CadastroEntidade/style.css
+++ b/src/pages/CadastroEntidade/style.css
@@ -1,8 +1,8 @@
-html{
-  background-color: #E5E5E5;
+.container-cadastrar {
+  background-color: #e5e5e5;
 }
 
-body {
+.container-cadastrar {
   margin: 0;
   padding: 0;
 }
@@ -26,11 +26,11 @@ body {
   margin: 30px 0px 20px 0px;
 }
 
-label {
+.container-cadastrar label {
   font-family: Roboto;
 }
 
-input {
+.container-cadastrar input {
   border-radius: 12px;
   border: 1px gray solid;
   height: 30px;
