--- a/src/pages/EditarEntidade/style.css
+++ b/src/pages/EditarEntidade/style.css
@@ -1,8 +1,8 @@
-html{
+.container-editar html {
   background-color: rgb(222, 216, 216);
 }
 
-body {
+.container-editar body {
   margin: 0;
   padding: 0;
 }
