--- a/src/pages/LoginEntidade/style.css
+++ b/src/pages/LoginEntidade/style.css
@@ -1,8 +1,8 @@
-html{
+.container-login html {
   background-color: rgb(222, 216, 216);
 }
 
-body {
+.container-login body {
   margin: 0;
   padding: 0;
 }
@@ -68,7 +68,6 @@ body {
   font-size: 20px;
   color: rgb(19, 93, 149);
   text-align: center;
-  
 }
 
 .background {
@@ -77,6 +76,6 @@ body {
   z-index: 2;
   filter: blur(4px);
   background-repeat: no-repeat;
-  background-size: 100%; 
+  background-size: 100%;
   background-position: center;
 }
