--- a/src/pages/Admin/style.css
+++ b/src/pages/Admin/style.css
@@ -1,3 +1,4 @@
+
 .header-admin {
     display: flex;
     justify-content: space-around;
@@ -15,7 +16,7 @@
 
 .main-admin-container {
     display: flex;
-    justify-content: center;
+    justify-content: left;
     margin: 3rem 0;
 }
 
